fix docker update modal styles in dark mode

--- a/ui/src/app/core/manage-plugins/manage-plugin/manage-plugin.component.scss
+++ b/ui/src/app/core/manage-plugins/manage-plugin/manage-plugin.component.scss
@@ -22,46 +22,4 @@
   --bs-nav-tabs-border-width: 0;
 }
 
-::ng-deep .plugin-md {
-  text-align: left;
-  font-size: 0.85rem;
-  word-wrap: break-word;
-
-  img {
-    max-width: 100%;
-  }
-
-  h1 {
-    font-size: 1.3rem;
-    font-weight: 300;
-  }
-
-  h2 {
-    font-size: 1.2rem;
-    font-weight: 300;
-  }
-
-  h3 {
-    font-size: 1.1rem;
-    font-weight: 300;
-  }
-
-  h4 {
-    font-size: 1rem;
-    font-weight: 300;
-  }
-
-  h5 {
-    font-size: 0.9rem;
-    font-weight: 300;
-  }
-
-  pre {
-    padding: 16px;
-    overflow: auto;
-    font-size: 85%;
-    line-height: 1.45;
-    background-color: #f6f8fa;
-    border-radius: 3px;
-  }
-}
+// Markdown styles are now global - see ui/src/scss/components/markdown.scss
